force-app/main/default/objects/SPEN_CustomerInteractionLog__c/SPEN_CustomerInteractionLog__c.object-meta.xml
<CustomObject>
    <description>Object created to track and update Customer Interactions for SPT cases. Can be extended for other CRM tracks as well</description>
    <label>Customer Interaction Log</label>
    <nameField>
        <displayFormat>CIL-{00000000}</displayFormat>
        <label>Interaction Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Interaction Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>