force-app/main/default/objects/SPEN_CustomerInteractionLog__c/fields/Engagement_Reason__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Reason__c</fullName>
    <label>Engagement Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Engagement_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outage Notification</fullName>
            </value>
            <value>
                <fullName>Notification of Fault</fullName>
            </value>
            <value>
                <fullName>Notification of Planned Outage</fullName>
            </value>
            <value>
                <fullName>Constraints Notification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>