force-app/main/default/objects/SPEN_CustomerInteractionLog__c/fields/Engagement_Type__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Type__c</fullName>
    <label>Engagement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MTM2</fullName>
            </value>
            <value>
                <fullName>MTM3</fullName>
            </value>
            <value>
                <fullName>MTM4</fullName>
            </value>
            <value>
                <fullName>MTM5</fullName>
            </value>
            <value>
                <fullName>MTM6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>