force-app/main/default/objects/SPEN_CustomerInteractionLog__c/fields/SPEN_AssignedTo__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AssignedTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Interaction_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>