force-app/main/default/objects/SPEN_CustomerInteractionLog__c/fields/SPEN_CustomerName__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CustomerName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Interaction Logs</relationshipLabel>
    <relationshipName>Customer_Interaction_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>