force-app/main/default/objects/SPEN_CustomerInteractionLog__c/fields/SPEN_DateTimeClosed__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DateTimeClosed__c</fullName>
    <label>Date Time Closed</label>
    <type>DateTime</type>
</CustomField>