force-app/main/default/objects/SPEN_CustomerInteractionLog__c/fields/SPEN_DateTimeOpened__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DateTimeOpened__c</fullName>
    <label>Date Time Opened</label>
    <type>DateTime</type>
</CustomField>