force-app/main/default/objects/SPEN_CustomerInteractionLog__c/fields/SPEN_DiscussionPoints__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DiscussionPoints__c</fullName>
    <label>Discussion Points</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>