force-app/main/default/objects/SPEN_CustomerInteractionLog__c/fields/SPEN_RelatedCase__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RelatedCase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Customer Interaction Logs</relationshipLabel>
    <relationshipName>Customer_Interaction_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>