force-app/main/default/objects/SPEN_CustomerInteractionLog__c/fields/SPEN_TargetDateForClosure__c.field-meta.xml
<CustomField>
    <fullName>SPEN_TargetDateForClosure__c</fullName>
    <label>Target date for closure</label>
    <type>Date</type>
</CustomField>